--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,6 +21,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Install dependencies
+      run: npm install
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
@@ -33,5 +35,4 @@ jobs:
     - run: npm publish
       if: github.event_name == 'push'
       env:
-        CI: true
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
