--- a/.github/workflows/release.js.yml
+++ b/.github/workflows/release.js.yml
@@ -1,13 +1,11 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: Release
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  release:
+    types: [published]
 
 jobs:
   build:
@@ -32,19 +30,6 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-
-    - name: Resolve version
-      id: version
-      run: echo "value=$(npm run --silent version)" >> $GITHUB_OUTPUT
-
-    - name: Resolve sha
-      id: sha
-      run: echo "value=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-
-    - name: 'Version based on commit'
-      run: npm version ${{ steps.version.outputs.value }}-main.${{ steps.sha.outputs.value }} --force --no-git-tag-version
-
-    - run: npm publish --provenance --tag main
-      if: github.event_name == 'push'
+    - run: npm publish --provenance
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
