--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vinkas/tailwindcss",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Tailwind CSS plugin for Vinkas",
   "main": "src/index.js",
   "publishConfig": {
@@ -13,7 +13,8 @@
     "trailingComma": "es5"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "version": "node -p \"require('./package.json').version\""
   },
   "repository": {
     "type": "git",
