--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "description": "Tailwind CSS plugin for Vinkas",
   "type": "module",
-  "main": "src/index.ts",
+  "main": "lib/index.js",
+  "module": "src/index.ts",
+  "types": "src/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
@@ -15,6 +17,7 @@
   },
   "scripts": {
     "test": "jest",
+    "build": "tsc -p .",
     "version": "node -p \"require('./package.json').version\""
   },
   "repository": {
@@ -37,6 +40,10 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.13"
   }
 }
